--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
 
+<!-- from Andyafter -->
+
 <!--
 
     Welcome to the light side of the source, young padawan.
@@ -434,4 +436,5 @@ if ("ontouchstart" in document.documentElement) {
     Cheers!
     
 -->
+
 
