--- a/index.html
+++ b/index.html
@@ -208,17 +208,20 @@
 
 
     <div class="step slide" data-x="0" data-y="-1500">
-      <p> Much Sequencial Money Flow Data</p>
-      <p> Financial Entities </p>
-      <p> Influence </p>
-      <p style="font-size:40px"> One Chart </p>
-
+      <div id="center">
+      <p style="font-size:40px; line-height:130%; text-align:center;"> Much Sequencial Money Flow Data</p>
+      <p style="font-size:40px; line-height:130%;text-align:center;"> Financial Entities </p>
+      <p style="font-size:50px;line-height:180%;text-align:center;"> Influence </p>
+      <p style="font-size:50px;line-height:180%;text-align:center;"> One Chart </p>
+    </div>
     </div>
 
     <div class="step" data-x="1000" data-y="-1500" data-scale="1">
+
         <div id="hamilton">
             <script type="text/javascript" src="js/caret.js"></script>
             <script type="text/javascript" src="js/app.js"></script>
+
             <link href="css/bootstrap.min.css" rel="stylesheet" />
                 <style type="text/css">
                   .hamilton {
@@ -282,7 +285,7 @@
 
 
 
-    <div id="title" class="step" data-x="2000" data-y="-1500" data-z="-1000" data-rotate="90" data-rotate-x="-90"  data-scale="1">
+    <div  class="step" data-x="2000" data-y="-1500" data-z="-1000" data-rotate="90" data-rotate-x="-90"  data-scale="1">
         <style>
             .nodestyle circle {
               fill: #fff;
@@ -464,14 +467,14 @@
     -->
     <div id="ing" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="2">
         <style type="text/css">
-        #fig {
+        #figure {
           width: 800px;
           height: 800px;
         }
       </style>
       <script type="text/javascript" src="js/miserables.js"></script>
       <script type="text/javascript" src="js/protovis.js"></script>
-      <div id="center"><div id="fig">
+    <div id="figure">
         <script type="text/javascript+protovis">
           var color = pv.Colors.category19().by(function(d) d.group);
 
@@ -496,7 +499,7 @@
               .textStyle(color);
           vis.render();
         </script>
-      </div></div>
+      </div>
     </div>
 
     <div id="imagination" class="step" data-x="6700" data-y="-300" data-scale="6">
@@ -514,100 +517,9 @@
           </style>
           <div id="chord" >
 
-      <script>
-
-        var matrix = [
-          [11975,  5871, 8916, 2868],
-          [ 1951, 10048, 2060, 6171],
-          [ 8010, 16145, 8090, 8045],
-          [ 1013,   990,  940, 6907]
-        ];
-
-        var chord = d3.layout.chord()
-            .padding(.05)
-            .sortSubgroups(d3.descending)
-            .matrix(matrix);
-
-        var width = 960,
-            height = 500,
-            innerRadius = Math.min(width, height) * .41,
-            outerRadius = innerRadius * 1.1;
-
-        var fill = d3.scale.ordinal()
-            .domain(d3.range(4))
-            .range(["#000000", "#FFDD89", "#957244", "#F26223"]);
-
-        var svg = d3.select("#chord").append("svg")
-            .attr("width", width)
-            .attr("height", height)
-          .append("g")
-            .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
-
-        svg.append("g").selectAll("path")
-            .data(chord.groups)
-          .enter().append("path")
-            .style("fill", function(d) { return fill(d.index); })
-            .style("stroke", function(d) { return fill(d.index); })
-            .attr("d", d3.svg.arc().innerRadius(innerRadius).outerRadius(outerRadius))
-            .on("mouseover", fade(.1))
-            .on("mouseout", fade(1));
-
-        var ticks = svg.append("g").selectAll("g")
-            .data(chord.groups)
-          .enter().append("g").selectAll("g")
-            .data(groupTicks)
-          .enter().append("g")
-            .attr("transform", function(d) {
-              return "rotate(" + (d.angle * 180 / Math.PI - 90) + ")"
-                  + "translate(" + outerRadius + ",0)";
-            });
-
-        ticks.append("line")
-            .attr("x1", 1)
-            .attr("y1", 0)
-            .attr("x2", 5)
-            .attr("y2", 0)
-            .style("stroke", "#000");
-
-        ticks.append("text")
-            .attr("x", 8)
-            .attr("dy", ".35em")
-            .attr("transform", function(d) { return d.angle > Math.PI ? "rotate(180)translate(-16)" : null; })
-            .style("text-anchor", function(d) { return d.angle > Math.PI ? "end" : null; })
-            .text(function(d) { return d.label; });
-
-        svg.append("g")
-            .attr("class", "chord")
-          .selectAll("path")
-            .data(chord.chords)
-          .enter().append("path")
-            .attr("d", d3.svg.chord().radius(innerRadius))
-            .style("fill", function(d) { return fill(d.target.index); })
-            .style("opacity", 1);
-
-        // Returns an array of tick angles and labels, given a group.
-        function groupTicks(d) {
-          var k = (d.endAngle - d.startAngle) / d.value;
-          return d3.range(0, d.value, 1000).map(function(v, i) {
-            return {
-              angle: v * k + d.startAngle,
-              label: i % 5 ? null : v / 1000 + "k"
-            };
-          });
-        }
-
-        // Returns an event handler for fading a given chord group.
-        function fade(opacity) {
-          return function(g, i) {
-            svg.selectAll(".chord path")
-                .filter(function(d) { return d.source.index != i && d.target.index != i; })
-              .transition()
-                .style("opacity", opacity);
-          };
-        }
-
-        </script>
-        </div>
+            <script src="js/chord.js" type="text/javascript">
+            </script>
+          </div>
 
 
     </div>
@@ -615,7 +527,7 @@
 
 
     <div id="one-more-thing" class="step" data-x="6000" data-y="4000" data-scale="2">
-        <p>Help People See the Connections</p>
+        <p> A little bit Python</p>
     </div>
 
     <!--
@@ -631,7 +543,13 @@
         
     -->
     <div id="its-in-3d" class="step" data-x="6200" data-y="4500" data-z="-100" data-rotate-x="-40" data-rotate-y="10" data-scale="2">
-        <p id="prophecy">The Prophecy</p>
+        <p >JS</p>
+        <p >NodeJS</p>
+        <p >EmberJS</p>
+        <p >D3JS</p>
+
+        <p> Reserves </p>
+        <p> Assets and Liabilities </p>
 
     </div>
 
